@@ -8,7 +8,7 @@ They don't enforce any particular checkout, build or install
 directories for your gnome2 setup (this is deduced from the config
 file).
 
-You must have python >= 2.0 installed for jhbuild to run.
+You must have python >= 2.2 installed for jhbuild to run.
 
 If you want to build from tarballs, you probably don't want to use
 jhbuild.  You should probably look at GARNOME instead:
@@ -62,7 +62,7 @@ build tools installed.  Currently, these include:
   automake 1.7.x
   automake 1.8.x
   pkg-config >= 0.14
-  python >= 2.0
+  python >= 2.2
   audiofile
 
 Some modules may be managed with Subversion or GNU Arch, so you will
