@@ -1,3 +1,10 @@
+2005-06-23  James Henstridge  <james@jamesh.id.au>
+
+	* jhbuild/monkeypatch.py: add enumerate() and string.Template (not
+	used yet).
+
+	* README: bump required python version to 2.2.
+
 2005-06-23  Kaushal Kumar  <kakumar@novell.com>
 
 	* modulesets/gnome-2.12.modules:
